<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.examples.aiscafeteria.LoginActivity">

    <EditText
        android:id="@+id/loginPasswordText"
        android:layout_width="325sp"
        android:layout_height="57sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="15sp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/loginEmailText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/loginEmailText"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailText" />

    <ImageView
        android:id="@+id/imageView_loginLogo"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_red" />

    <TextView
        android:id="@+id/textView_loginLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/bagelfatone_regular"
        android:text="@string/ais_cafeteria"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView_loginLogo"
        app:layout_constraintStart_toStartOf="@+id/imageView_loginLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageView_loginLogo" />

    <TextView
        android:id="@+id/textView_loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/adlamdisplay_regular"
        android:text="@string/login_to_your_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_loginLogoText" />

    <EditText
        android:id="@+id/loginEmailText"
        android:layout_width="325sp"
        android:layout_height="57sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="15sp"
        android:elevation="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_loginText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_loginBtn"
        android:layout_width="157sp"
        android:layout_height="57sp"
        android:background="@drawable/greenbuttongradient"
        android:backgroundTint="@color/primary"
        android:elevation="5dp"
        android:fontFamily="@font/concertone_regular"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordText" />

    <TextView
        android:id="@+id/textView_loginTextBelowBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:fontFamily="@font/adlamdisplay_regular"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/button_loginBtn"
        app:layout_constraintStart_toStartOf="@+id/button_loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/button_loginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>