<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.examples.aiscafeteria.RegisterActivity">


    <ImageView
        android:id="@+id/imageView_registerLogo"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_red" />

    <TextView
        android:id="@+id/textView_registerLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/bagelfatone_regular"
        android:text="@string/ais_cafeteria"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView_registerLogo"
        app:layout_constraintStart_toStartOf="@+id/imageView_registerLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageView_registerLogo" />

    <TextView
        android:id="@+id/textView_registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/adlamdisplay_regular"
        android:text="@string/sign_up_here"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_registerLogoText" />

    <EditText
        android:id="@+id/registerNameText"
        android:layout_width="325sp"
        android:layout_height="57sp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="15sp"
        android:elevation="5dp"
        android:hint="Name"
        android:inputType="text"
        android:paddingLeft="15sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_registerText" />

    <EditText
        android:id="@+id/registerEmailText"
        android:layout_width="325sp"
        android:layout_height="57sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="15sp"
        android:elevation="5dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerNameText" />

    <EditText
        android:id="@+id/registerPasswordText"
        android:layout_width="325sp"
        android:layout_height="57sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="15sp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="15sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="157sp"
        android:layout_height="57sp"
        android:background="@drawable/greenbuttongradient"
        android:backgroundTint="@color/primary"
        android:elevation="5dp"
        android:fontFamily="@font/concertone_regular"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordText" />

    <TextView
        android:id="@+id/textView_registerTextBelowBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:fontFamily="@font/adlamdisplay_regular"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
